--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "npm run eslint && npm run abaplint",
     "unit": "npm run build && echo RUNNING && node output/index.mjs",
-    "coverage": "npm run unit && c8 node output/index.mjs && c8 report --reporter=html",
+    "coverage": "npm run unit && c8 node output/index.mjs && c8 report --reporter=html"
   },
   "repository": {
     "type": "git",
